# Humanoid-Robot-ROS

./: .gitignore  README.md  build_project.sh  debug_motor_node.sh  launch_clusters.sh  launch_controller_listener.sh  launch_controller_node.sh  launch_motor_node.sh  motor_test.sh  scan_motors.sh  uva_test.sh
devel/: .catkin  .rosinstall  _setup_util.py
devel/lib/pkgconfig/: robot_controller.pc
devel/lib/robot_controller/: controller_listener
devel/share/robot_controller/cmake/: robot_controllerConfig.cmake
kinematics/python/: forward_kinematics.py  kinematics.py
src/angle_test/include/launch/: angle_test.launch
src/motor_controller/: CMakeLists.txt  package.xml
src/motor_controller/include/: Arm_Cluster.h  Motor.h  Motor_Cluster.h  Motor_Controller.h
src/motor_controller/include/launch/: left_arm_cluster_node.launch  left_leg_cluster_node.launch  motor_node.launch  right_arm_cluster_node.launch  right_leg_cluster_node.launch  uva_test.launch
src/motor_controller/launch/: motor_listener.launch
src/motor_controller/src/: Arm_Cluster.cpp  Motor.cpp  Motor_Cluster.cpp  Motor_Controller.cpp  clusters.cpp  motor_node.cpp  motor_node_test.cpp  scan_motors.cpp  test_motor.cpp  uva_test.cpp  uva_test_left.cpp  uva_test_right.cpp
src/motor_controller/src/clusters/: left_arm_cluster.cpp  left_leg_cluster.cpp  right_arm_cluster.cpp  right_leg_cluster.cpp
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/include/: Controller.h
src/robot_controller/launch/: controller_listener.launch  controller_node.launch
src/robot_controller/msg/: Axis_data.msg  Button_data.msg  controller_state.msg
src/robot_controller/src/: Controller.cpp  controller_listener.cpp  controller_node.cpp
using_markers/: package.xml
